# EDAF50

./: .gitignore  README.md
lab1/: Makefile  MakefileOld  awnsers  charcast  charcast.cc  coding.cc  decode  decode.cc  encode  encode.cc  hello  hello.cc  list.cc  ltest  print_argv  print_argv.cc  test_coding  text.enc
lab1/buggy_programs/: Makefile  bounds  bounds-heap  bounds.cc  dangling  dangling.cc  leak  sum  sum.cc  ub  ub.cc
lab1/cmake-part/: CMakeLists.txt  ltest.cc  text
lab1/cmake-part/debug/: CMakeCache.txt  Makefile  TestCoding  TestList  cmake_install.cmake
lab1/cmake-part/debug/liblab1/: Makefile  cmake_install.cmake
lab1/cmake-part/liblab1/: CMakeLists.txt  coding.cc  decode.cc  encode.cc  list.h
lab1/stream-examples/: example-out  read-words
lab2/: Makefile  dictionary.cc  dictionary.h  load_words  load_words.cc  load_words.d  reflection  spell  trigrams.cc  trigrams.h  word.cc  word.h
lab3/: CMakeLists.txt  reflection
lab3/lab3/: CMakeLists.txt
lab3/lab3/date/: CMakeLists.txt  date.cc  date.h  g_date_test.cc  string_cast.cc  string_cast_test.cc  to_string.cc  to_string_test.cc
lab3/lab3/html/: CMakeLists.txt  html_tag_remover.cc  html_test.cc  tagremover.cc  tagremover.h
lab3/lab3/primes/: CMakeLists.txt  prime_test.cc  primes.cc  sieve_of_eratosthenes_primes.cc  sieve_of_eratosthenes_primes.h
lab4/bitset/: Makefile  bitreference.cc  bitreference.h  bitset.cc  bitsetiterator.h  bitsettest1  bitsettest2  bitsettest2.d  simplebitset.d  simplebitsettest  simplebitsettest.d
lab4/nameserver/: Makefile  hns.cc  hns.d  hns.h  mns.cc  mns.d  mns.h  nstest  nstest.cc  nstime  umns.cc  umns.d  umns.h  vns.cc  vns.d  vns.h
project/: CMakeLists.txt  CommandHandler.java  README.md
project/clientserver/: myclient.cc  myserver.cc
project/clientserver/.cache/clangd/index/: article.h.0E0CFAB4146AF545.idx  connection.cc.E2865E2447288C6D.idx  connection.h.824454D05A7C0823.idx  connection.h.8AAD55D69E9552BD.idx  connectionclosedexception.h.7291A07021D52019.idx  connectionclosedexception.h.754E8B9AF45F86FA.idx  database.h.44A4581AEBC3D83F.idx  myclient.cc.3ECCA140D0FDB88D.idx  myserver.cc.E3B42470F8ABD762.idx  newsgroup.h.5BF58B3F9AD7E246.idx  primeDatabase.cc.D118DE5A821AD441.idx  server.cc.7C1590793B922774.idx  server.h.2A74676CEA355D20.idx  server.h.FF8AC46E3FE24972.idx
project/clientserver/example/: myclient.cc  myserver.cc
project/clientserver/include/: protocol.h
project/clientserver/src/: connection.cc  connectionclosedexception.h  server.cc  server.h
project/clientserver/src/database/: article.cc  article.h  database.h  diskDatabase.h  enums.h  hns.cc  hns.h  newsgroup.cc  newsgroup.h  primeDatabase.cc  primeDatabase.h
project/example/: myserver.cc
project/include/: connectionclosedexception.h  server.h
project/news_database/1/: metadata.txt
project/news_database/1/2/: metadata.txt
project/news_database/3/: metadata.txt
project/old/: connection.h
project/src/: CMakeLists.txt  messagehandler.cc  messagehandler.h  server.cc
project/src/database/: CMakeLists.txt  article.cc  article.h  database.h  databaseExceptions.h  diskDatabase.h  enums.h  newsgroup.cc  newsgroup.h  primeDatabase.cc  primeDatabase.h
project/src/database/disk/: CMakeLists.txt  diskDatabase.cc  diskDatabase.h
project/src/database/prime/: CMakeLists.txt  article.cc  article.h  newsgroup.cc  newsgroup.h  primeDatabase.cc  primeDatabase.h
project/src/server/: CMakeLists.txt  clientserverexceptions.h  connection.cc  connection.h  messagehandler.cc  messagehandler.h  server.cc  server.h
project/src/server/clientserver/: CMakeLists.txt  diskServer.cc  myclient.cc  primeServer.cc
tentatest/: forprint  forprint.cpp  person.cpp  test
